Added price to the specific crypto page

--- a/src/app/crypto-view/crypto-view.component.html
+++ b/src/app/crypto-view/crypto-view.component.html
@@ -6,7 +6,9 @@
       <div>
         <div id="tokenName"> {{cryptoInfo.displayName}} </div>
         <div id="tokenId"> {{cryptoInfo.id}} </div>
+
       </div>
+      <div id="tokenPrice"> ${{cryptoInfo.price.toFixed(2)}}</div>
     </div>
 
     <mat-button-toggle-group  name="timeToggles" class="timeToggles" value="Week" >
