--- a/src/app/crypto-view/crypto-view.component.css
+++ b/src/app/crypto-view/crypto-view.component.css
@@ -26,10 +26,9 @@
   justify-content: space-between;
 }
 
-
 .tokenIdentifier{
   display: flex;
-  width: 150px;
+  width: 500px;
   align-items: center;
   margin-left: 2.5%;
   margin-top: 1%;
@@ -48,6 +47,13 @@
 #tokenId {
   color: grey;
   font-size: 17px;
+}
+
+#tokenPrice{
+  font-size: 30px;
+  float: right;
+  margin-left: 15px;
+  color: white;
 }
 
 .toggleSeriesDiv{
