--- a/src/styles.css
+++ b/src/styles.css
@@ -4,8 +4,9 @@ body {
   font-family: Roboto, Arial, sans-serif;
   margin: 0;
   padding: 30px;
-  background: hsla(255, 62%, 31%, 1);
-  background: linear-gradient(120deg, hsl(260, 67%, 34%) 0%, hsl(190, 90%, 28%) 100%) fixed;
+  background: #485461;
+  background: linear-gradient(315deg, #485461 0%, #28313b 74%) fixed;
+
 }
 
 .mat-table{
