--- a/src/app/crypto-view/crypto-view.component.html
+++ b/src/app/crypto-view/crypto-view.component.html
@@ -79,11 +79,20 @@
           </div>
         </div>
       </div>
+    </div>
+
+    <div class="galaxyScoreDiv">
 
     </div>
 
+  </div>
+
+  <div class="segmentContainer">
     <div class="wordcloudDiv" id="wordcloudDiv"></div>
 
+    <div class="socialMediaPostsDiv">
+
+    </div>
   </div>
 </div>
 </body>
