--- a/src/app/crypto-view/crypto-view.component.css
+++ b/src/app/crypto-view/crypto-view.component.css
@@ -13,7 +13,7 @@
   left: 0;
   right: 0;
   width: 80%;
-  height: 200%;
+  height: 300%;
   margin-top: 1%;
   margin-right: auto;
   margin-left: auto;
@@ -154,10 +154,23 @@
   color: white;
 }
 
+.galaxyScoreDiv{
+  margin: auto;
+  width: 45%;
+  height: 95%;
+  background-color: red;
+}
+
 .wordcloudDiv{
   margin: auto;
   width: 45%;
   height: 95%;
+}
+.socialMediaPostsDiv{
+  margin: auto;
+  width: 45%;
+  height: 95%;
+  background-color: blue;
 }
 
 
