--- a/src/app/crypto-view/crypto-view.component.html
+++ b/src/app/crypto-view/crypto-view.component.html
@@ -89,8 +89,14 @@
 
   <div class="segmentContainer">
     <div class="wordcloudDiv" id="wordcloudDiv"></div>
+  </div>
 
-    <div class="socialMediaPostsDiv">
+  <div class="segmentContainer">
+    <div class="twitterDiv">
+
+    </div>
+
+    <div class="redditDiv">
 
     </div>
   </div>
