--- a/src/app/crypto-view/crypto-view.component.html
+++ b/src/app/crypto-view/crypto-view.component.html
@@ -93,11 +93,15 @@
 
   <div class="segmentContainer">
     <div class="twitterDiv">
-
+      <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">your typo makes it original</p>&mdash; Twitter (@Twitter) <a href="https://twitter.com/Twitter/status/1462843218446503940?ref_src=twsrc%5Etfw">November 22, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
 
     <div class="redditDiv">
-
+      <iframe class="reddit-embed" src="https://www.redditmedia.com/r/Bitcoin/comments/r18dyj/fiat_is_an_environmental_disaster_bitcoin_fixes/?ref_source=embed&amp;ref=share&amp;embed=true&amp;showmedia=false&amp;theme=dark" sandbox="allow-scripts allow-same-origin allow-popups" style="border: none;" height="127" width="640" scrolling="yes"></iframe>
+      <iframe class="reddit-embed" src="https://www.redditmedia.com/r/Bitcoin/comments/r18dyj/fiat_is_an_environmental_disaster_bitcoin_fixes/?ref_source=embed&amp;ref=share&amp;embed=true&amp;showmedia=false&amp;theme=dark" sandbox="allow-scripts allow-same-origin allow-popups" style="border: none;" height="127" width="640" scrolling="yes"></iframe>
+      <iframe class="reddit-embed" src="https://www.redditmedia.com/r/Bitcoin/comments/r18dyj/fiat_is_an_environmental_disaster_bitcoin_fixes/?ref_source=embed&amp;ref=share&amp;embed=true&amp;showmedia=false&amp;theme=dark" sandbox="allow-scripts allow-same-origin allow-popups" style="border: none;" height="127" width="640" scrolling="yes"></iframe>
+      <iframe class="reddit-embed" src="https://www.redditmedia.com/r/Bitcoin/comments/r18dyj/fiat_is_an_environmental_disaster_bitcoin_fixes/?ref_source=embed&amp;ref=share&amp;embed=true&amp;showmedia=false&amp;theme=dark" sandbox="allow-scripts allow-same-origin allow-popups" style="border: none;" height="127" width="640" scrolling="yes"></iframe>
+      <iframe class="reddit-embed" src="https://www.redditmedia.com/r/Bitcoin/comments/r18dyj/fiat_is_an_environmental_disaster_bitcoin_fixes/?ref_source=embed&amp;ref=share&amp;embed=true&amp;showmedia=false&amp;theme=dark" sandbox="allow-scripts allow-same-origin allow-popups" style="border: none;" height="127" width="640" scrolling="yes"></iframe>
     </div>
   </div>
 </div>
