--- a/src/styles.css
+++ b/src/styles.css
@@ -21,3 +21,25 @@ body {
 }
 
 html {height: 100%}
+body {overflow: overlay;}
+
+/* ===== Scrollbar CSS ===== */
+/* Firefox */
+* {
+  scrollbar-width: none;
+  scrollbar-color: #a19aa2 #ffffff;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 9px;
+}
+
+*::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0.5);
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #938f86;
+  border-radius: 10px;
+}
