--- a/src/app/crypto-view/crypto-view.component.html
+++ b/src/app/crypto-view/crypto-view.component.html
@@ -1,3 +1,4 @@
+<body>
 <div class="container">
   <div class="cryptoNavBar">
     <div class="tokenIdentifier">
@@ -102,3 +103,4 @@
     </div>
   </div>
 </div>
+</body>
