--- a/src/app/crypto-view/crypto-view.component.html
+++ b/src/app/crypto-view/crypto-view.component.html
@@ -81,8 +81,33 @@
       </div>
     </div>
 
-    <div class="galaxyScoreDiv">
+    <div class="cryptoScoreDiv">
+      <h1> Galaxy Score (BTC)</h1>
+      <div id="overallScore">
+        <h1> 69/100 </h1>
+        <mat-progress-bar mode="determinate" value="69"></mat-progress-bar>
+      </div>
 
+      <div id="separateScores">
+
+        <div class="sepScoreSegment">
+          <p>Price score</p>
+          <mat-progress-bar mode="determinate" value="100"></mat-progress-bar>
+        </div>
+        <div class="sepScoreSegment">
+          <p>Social Impact Score</p>
+          <mat-progress-bar mode="determinate" value="66"></mat-progress-bar>
+        </div>
+        <div class="sepScoreSegment">
+          <p>Average Sentiment</p>
+          <mat-progress-bar mode="determinate" value="74"></mat-progress-bar>
+        </div>
+        <div class="sepScoreSegment">
+          <p>Correlation Rank</p>
+          <mat-progress-bar mode="determinate" value="84"></mat-progress-bar>
+        </div>
+
+      </div>
     </div>
 
   </div>
