--- a/src/app/crypto-view/crypto-view.component.css
+++ b/src/app/crypto-view/crypto-view.component.css
@@ -132,7 +132,7 @@
 }
 
 .tokenInfoDiv{
-  width: 45%;
+  width: 25%;
   height: 95%;
   margin: auto;
   display: flex;
@@ -163,11 +163,12 @@
 .bigText {
   font-size: 24px;
   color: white;
+  margin-top: 15%;
 }
 
 .cryptoScoreDiv{
   margin: auto;
-  width: 45%;
+  width: 65%;
   height: 95%;
   background-color: rgba(0, 0, 0, 0.26);
   border-radius: 15px;
@@ -224,7 +225,6 @@
   width: 100%;
   justify-content: space-between;
   margin-top: 3%;
-  text-align: right;
 }
 
 #separateScores{
