--- a/src/app/crypto-view/crypto-view.component.html
+++ b/src/app/crypto-view/crypto-view.component.html
@@ -8,7 +8,7 @@
         <div id="tokenId"> {{cryptoInfo.id}} </div>
 
       </div>
-      <div id="tokenPrice"> ${{cryptoInfo.price.toFixed(2)}}</div>
+      <div id="tokenPrice"> ${{cryptoInfo.price}}</div>
     </div>
 
     <mat-button-toggle-group  name="timeToggles" class="timeToggles" value="Week" >
@@ -35,6 +35,35 @@
   </div>
 
   <div class="segmentContainer">
+
+    <div class="cryptoScoreDiv">
+      <h1> Galaxy Score ({{cryptoInfo.id}})</h1>
+      <div id="overallScore">
+        <h1> {{cryptoScore[0]}}/100 </h1>
+        <mat-progress-bar mode="determinate" value="{{cryptoScore[0]}}"></mat-progress-bar>
+      </div>
+
+      <div id="separateScores">
+
+        <div class="sepScoreSegment">
+          <p>Price score</p>
+          <mat-progress-bar mode="determinate" value="{{cryptoScore[1]}}"></mat-progress-bar>
+        </div>
+        <div class="sepScoreSegment">
+          <p>Social Impact Score</p>
+          <mat-progress-bar mode="determinate" value="{{cryptoScore[2]}}"></mat-progress-bar>
+        </div>
+        <div class="sepScoreSegment">
+          <p>Average Sentiment</p>
+          <mat-progress-bar mode="determinate" value="{{cryptoScore[3]}}"></mat-progress-bar>
+        </div>
+        <div class="sepScoreSegment">
+          <p>Correlation Rank</p>
+          <mat-progress-bar mode="determinate" value="{{cryptoScore[4]}}"></mat-progress-bar>
+        </div>
+
+      </div>
+    </div>
     <div class="tokenInfoDiv">
       <div class="column">
         <div class="row">
@@ -78,35 +107,6 @@
             <div class="bigText"> {{cryptoInfo.mostInteractions}} </div>
           </div>
         </div>
-      </div>
-    </div>
-
-    <div class="cryptoScoreDiv">
-      <h1> Galaxy Score (BTC)</h1>
-      <div id="overallScore">
-        <h1> 69/100 </h1>
-        <mat-progress-bar mode="determinate" value="69"></mat-progress-bar>
-      </div>
-
-      <div id="separateScores">
-
-        <div class="sepScoreSegment">
-          <p>Price score</p>
-          <mat-progress-bar mode="determinate" value="100"></mat-progress-bar>
-        </div>
-        <div class="sepScoreSegment">
-          <p>Social Impact Score</p>
-          <mat-progress-bar mode="determinate" value="66"></mat-progress-bar>
-        </div>
-        <div class="sepScoreSegment">
-          <p>Average Sentiment</p>
-          <mat-progress-bar mode="determinate" value="74"></mat-progress-bar>
-        </div>
-        <div class="sepScoreSegment">
-          <p>Correlation Rank</p>
-          <mat-progress-bar mode="determinate" value="84"></mat-progress-bar>
-        </div>
-
       </div>
     </div>
 
