--- a/src/app/crypto-view/crypto-view.component.html
+++ b/src/app/crypto-view/crypto-view.component.html
@@ -66,12 +66,31 @@
     </div>
     <div class="tokenInfoDiv">
       <div class="column">
+          <div class="row">
+            <div class="infoContainer">
+              <div class="smallText"> Pos Sent </div>
+              <div class="bigText"> {{cryptoInfo.posSentiment.toPrecision(4)}} </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="infoContainer">
+              <div class="smallText"> Neg Sent </div>
+              <div class="bigText"> {{cryptoInfo.negSentiment.toPrecision(4)}} </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="infoContainer">
+              <div class="smallText"> Rel Sent </div>
+              <div class="bigText"> {{cryptoInfo.relSentiment.toPrecision(4)}} </div>
+            </div>
+          </div>
+        </div>
+      <div class="column">
         <div class="row">
           <div class="infoContainer">
-            <div class="smallText"> Positive Sentiment </div>
-            <div class="bigText"> {{cryptoInfo.posSentiment.toPrecision(4)}} </div>
+            <div class="smallText"> Interactions </div>
+            <div class="bigText"> {{cryptoInfo.mostInteractions}} </div>
           </div>
-
         </div>
         <div class="row">
           <div class="infoContainer">
@@ -79,39 +98,15 @@
             <div class="bigText"> {{cryptoInfo.mentions}} </div>
           </div>
         </div>
-      </div>
-      <div class="column">
-        <div class="row">
-          <div class="infoContainer">
-            <div class="smallText"> Negative Sentiment </div>
-            <div class="bigText"> {{cryptoInfo.negSentiment.toPrecision(4)}} </div>
-          </div>
-        </div>
         <div class="row">
           <div class="infoContainer">
             <div class="smallText"> 24h change </div>
-            <div class="bigText"> {{cryptoInfo.relMentions.toPrecision(4)}} </div>
+            <div class="bigText"> {{cryptoInfo.relMentions.toPrecision(4) +"%"}} </div>
           </div>
         </div>
       </div>
-      <div class="column">
-        <div class="row">
-          <div class="infoContainer">
-            <div class="smallText"> Relative Sentiment </div>
-            <div class="bigText"> {{cryptoInfo.relSentiment.toPrecision(4)}} </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="infoContainer">
-            <div class="smallText"> Interactions </div>
-            <div class="bigText"> {{cryptoInfo.mostInteractions}} </div>
-          </div>
-        </div>
       </div>
     </div>
-
-  </div>
-
   <div class="segmentContainer">
     <div class="wordcloudDiv" id="wordcloudDiv"></div>
   </div>
