--- a/src/app/cryptocurrencies/cryptocurrencies.component.html
+++ b/src/app/cryptocurrencies/cryptocurrencies.component.html
@@ -13,6 +13,16 @@
     </a></td>
   </ng-container>
 
+  <ng-container matColumnDef="momentum">
+    <th mat-header-cell (click)="this.params.get('sortParam') === '-final_score' ? sortData('final_score'): sortData('-final_score')" *matHeaderCellDef>
+      <div mat-sort-header="Momentum" matTooltip="The custom scoring system of Cryptopinion"
+           matTooltipPosition="above" [matTooltipShowDelay]="500">
+        Momentum
+      </div>
+    </th>
+    <td id="finalScore" mat-cell  *matCellDef="let element"> {{element.final_score}}/100 </td>
+  </ng-container>
+
   <ng-container matColumnDef="price">
     <th mat-header-cell *matHeaderCellDef> Price </th>
     <td mat-cell *matCellDef="let element">{{'$' + element.price}}</td>
