--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -42,6 +42,12 @@
   position: relative;
 }
 
+.AnchorDiv {
+  position: fixed;
+  width: 275px;
+  z-index: 10;
+}
+
 #searchResult li{
   margin-top: -1px; /* Prevent double borders */
   background-color: #1C1D21FC; /* Grey background color */
