--- a/src/app/crypto-view/crypto-view.component.html
+++ b/src/app/crypto-view/crypto-view.component.html
@@ -37,7 +37,7 @@
   <div class="segmentContainer">
 
     <div class="cryptoScoreDiv">
-      <h1> Crypto Score TM ({{cryptoInfo.id}})</h1>
+      <h1> Momentum ({{cryptoInfo.id}})</h1>
       <div id="overallScore">
         <h1> {{cryptoInfo.final_score}}/100 </h1>
         <mat-progress-bar mode="determinate" value="{{cryptoInfo.final_score}}"></mat-progress-bar>
