--- a/src/app/cryptocurrencies/cryptocurrencies.component.html
+++ b/src/app/cryptocurrencies/cryptocurrencies.component.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]=cryptoList id="crypto-table" class="mat-elevation-z0" matSort matSortActive="Mentions" matSortStart="desc" matSortDirection="desc" matSortDisableClear>
+<table mat-table [dataSource]=cryptoList id="crypto-table" class="mat-elevation-z0" matSort matSortActive="Momentum" matSortStart="desc" matSortDirection="desc" matSortDisableClear>
 
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef mat-sort-header="Name" (click)="this.params.get('sortParam') === 'displayName' ?  sortData('-displayName') : sortData('displayName')"> Name </th>
@@ -29,7 +29,7 @@
   </ng-container>
 
   <ng-container matColumnDef="price">
-    <th mat-header-cell (click)="this.params.get('sortParam') === '-price' ? sortData('price'): sortData('-price')" *matHeaderCellDef> Price </th>
+    <th mat-sort-header="price" mat-header-cell (click)="this.params.get('sortParam') === '-price' ? sortData('price'): sortData('-price')" *matHeaderCellDef> Price </th>
     <td mat-cell *matCellDef="let element">{{'$' + element.price}}</td>
   </ng-container>
 
